--- a/index.html
+++ b/index.html
@@ -173,28 +173,28 @@
 												<span>Waterfall mountains 
 											P3D259 из 3-х плиток.
 											60x30, Панно</span>
-												<p>Артикул: b02131</p>
+											<p>Артикул: <br>b02131</br></p>
 											</div></a>
 										<a href="">Удалить</a></li>
 									<li><a href=""><img src="img/another/Прямоугольник 1168.png" alt=""><div class="korzina-text">
 												<span>Waterfall mountains 
 										P3D259 из 3-х плиток.
 										60x30, Панно</span>
-												<p>Артикул: b02131</p>
+												<p>Артикул: <br>b02131</br></p>
 											</div></a>
 										<a href="">Удалить</a></li>
 									<li><a href=""><img src="img/another/Прямоугольник 1168.png" alt=""><div class="korzina-text">
 												<span>Waterfall mountains 
 										P3D259 из 3-х плиток.
 										60x30, Панно</span>
-												<p>Артикул: b02131</p>
+												<p>Артикул: <br>b02131</br></p>
 											</div></a>
 										<a href="">Удалить</a></li>
 										<li><a href=""><img src="img/another/korzana4.png" alt=""><div class="korzina-text">
 												<span>Waterfall mountains 
 											P3D259 из 3-х плиток.
 											60x30, Панно</span>
-												<p>Артикул: b02131</p>
+												<p>Артикул: <br>b02131</br></p>
 											</div></a>
 										<a href="">Удалить</a></li>
 									</ul>
